<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisActivity"
    android:background="@color/regis_background_big">

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/regis_bg"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/code_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/regis_bg"
        app:title="@string/app_verified_code"
        app:navigationIcon="@drawable/app_back" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@mipmap/regis_bg"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/item_bg">

        <EditText
            android:id="@+id/code_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:maxLines="1"
            android:padding="10dp"
            android:hint="@string/app_verified_code_input"
            />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:text="@string/app_verified_code_send"
            android:textSize="17sp"
            android:background="@drawable/button_bg"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="24sp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

</LinearLayout>