<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background8_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/layout2_head"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            android:background="@mipmap/head_icon"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp">
        <Button
            android:id="@+id/btn_layout_main_schedule"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/schedule"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"
            />
        <Button
            android:id="@+id/btn_layout_main_foods"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/food"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"
            />
        <Button
            android:id="@+id/btn_layout_main_drinks"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/drinks"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"
            />
        <Button
            android:id="@+id/btn_layout_main_life"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/life"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"
            />
        <Button
            android:id="@+id/btn_layout_medicine"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/medicine"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"
            />
    </LinearLayout>
</LinearLayout>